# src/biz/menu/MenuRoute.ts
@@ -4,7 +4,7 @@ import MenuController from './MenuController';
 import MenuService from './MenuService';
 
 class MenuRoute implements Route {
-  public path = 'api/menu';
+  public path = '/api/menu';
   public router = Router();
   public MenuController = new MenuController(new MenuService());
 
@@ -12,9 +12,11 @@ class MenuRoute implements Route {
     this.initializeRoutes();
   }
   private initializeRoutes() {
-    console.log('라우터 진입');
-    this.router.get(`${this.path}`, this.MenuController.list);
-    this.router.post(`${this.path}`, this.MenuController.reg);
+    this.router.get(`${this.path}`, this.MenuController.listMenu);
+    this.router.post(`${this.path}`, this.MenuController.regMenu);
+    this.router.delete(`${this.path}/:id`, this.MenuController.deleteMenu);
+    this.router.put(`${this.path}`, this.MenuController.editMenu);
+    
   }
 }
 
